fix: Horizontal scrolling on desktop viewing and was removed with hiding horizontal overflow in html

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@
 
 html {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 h2, h3 {
